--- a/cybergame/index.html
+++ b/cybergame/index.html
@@ -27,33 +27,34 @@
 	</div>
 	<div class="introboxcontent">
 		<h2>第八届 UICCG英雄联盟赛制</h2>
-		参赛须知:
-		1.	线上报名，进群报名：--五人组队。
-		2.	参赛选手需要先参加小组赛，然后进去决赛。(小组赛采取BO3:三盘两胜制，决赛采取BO5:五盘三胜制)工作人员会把参赛队伍分成两个小组，然后开始抽签打第一轮比赛，赢得队伍进入第二轮，输的队伍参加复活赛（复活赛决出两只队伍进入第二轮），第二轮，个队伍抽签打淘汰赛，赢的队伍进入第三轮，然后进行循环赛，决出小组赛的第一第二名。每天决出一个小组的第一第二名。隔周进行决赛，决赛决出冠亚季军。
-		3.	晋级决赛后，请密切留意后续的比赛信息，建议和工作人员联系，了解清楚。
-		4.	小组赛采取车轮战，具体的比赛日期，请密切留意比赛信息(大概在3月初或者3月中旬)
+		<h3>参赛须知:</h3>
+		1.	线上报名，进群报名：--五人组队。<br/>
+		2.	参赛选手需要先参加小组赛，然后进去决赛。（小组赛采取BO3:三盘两胜制，决赛采取BO5:五盘三胜制）工作人员会把参赛队伍分成两个小组，然后开始抽签打第一轮比赛，赢得队伍进入第二轮，输的队伍参加复活赛（复活赛决出两只队伍进入第二轮），第二轮，两个队伍抽签打淘汰赛，赢的队伍进入第三轮，然后进行循环赛（不是积分赛，是两两队伍进行比赛，赛出小组第一第二名），决出小组赛的第一第二名。每天决出一个小组的第一第二名。隔周进行决赛，决赛决出冠亚季军。<br/>
+		3.	晋级决赛后，请密切留意后续的比赛信息，建议和工作人员联系，了解清楚。<br/>
+		4.	决赛采取第一小组的第一名与第二小组的第二名比赛，第一小组的第二名与第二小组的第一名比赛，赢得直接进入冠亚军争夺赛。输的进行季军争夺赛。<br/>
+		5.	小组赛采取车轮战，具体的比赛日期，请密切留意比赛信息(大概在3月初或者3月中旬)<br/>
 
-		参赛账号：
-		1.	因为要统一一个比赛区，防止不公平的现象出现，我们会采取通过购买比赛服账号（费用需要参赛选手自己付大约是30元一个，用一天，ps：淘宝上买的，如果参赛选手想要自己买，也是可以的，到比赛场地后，工作人员同意上网购买）
+		<h3>参赛账号：</h3>
+		因为要统一一个比赛区，防止不公平的现象出现，我们会向腾讯工作人员申请开通比赛服账号，比赛服账号的开通需要小组各个成员提供QQ账号。比赛服账号的点券以及金币额度有限，一旦用完后续无法再次充值，账号的点券及金币不会重置（也就意味着这个QQ号以后不论什么时候开通账号，账号里边都没有点券金币）。参赛的同学在购买必要的符文的同时，请理性消费必需品。
 
-		比赛规则：5VS5 召唤师峡谷
-		1、参赛选手须提前到达现场参赛，迟到10分钟将视为弃权。
-		2、参赛选手须年满18周岁，并携带本人有效身份证参赛； ；
-		3、所有比赛均为5v5、房间模式、征召模式；
-		4、比赛原则上采用淘汰赛、三局两胜定胜负，各赛区根据参赛队伍数量以裁判现场安排为准；
-		5、比赛胜负由系统判定胜负为准；
-		6、由裁判组织双方队长猜拳一轮，胜方开设房间，并在房间左侧，败者在右侧；
-		7、抽签、开设建房、进入房间须有效率，裁判发起命令3分钟内未作为的队伍视为弃权；
-		8、比赛禁选开始至比赛结束全过程不得人为退出游戏，违者视为弃权；
-		9、队伍中只要有1名选手被视为弃权，则全队取消参赛资格；
-		10、比赛开始10分钟内若有选手掉线（非人为），且不能在5分钟内重连成功，比赛重新开始。重赛时双方必须选择和重赛前完全一样的阵容和召唤师技能；（选手一旦掉线，必须立刻呼叫裁判，在裁判的监督下进行重连，若选手掉线不联系裁判，则比赛照常进行）
-		11、比赛进行10分钟后，若有选手掉线（非人为），则在双方完成正在进行的战斗后，全部回程，直到掉线选手重新连接。重连期间双方可各派1-2名队员击杀正在攻击本方防御塔、水晶或基地的小兵，但不能离开本方防御塔攻击范围追杀小兵，不能进入野区、河道，不能埋伏、攻击对方英雄，违者视为弃权；（选手一旦掉线，必须立刻呼叫裁判，在裁判的组织下双方选手等待掉线选手重连，若选手掉线不联系裁判，则比赛照常进行）
-		12、如果掉线选手10分钟内无法重连成功，或者掉线造成了逆转性的局势变化，裁判可在整局比赛结束前根据情况决定是否重赛，选手须完全服从，重赛时双方必须选择和重赛前完全一样的阵容；比赛一旦结束，则以比赛结果为准，不得重赛；
-		13、比赛中不得使用任何第三方软件(聊天工具除外)，否则视为弃权；
-		14、比赛中不得利用任何BUG，不得使用有严重BUG的英雄，以现场裁判通知为准；
-		15、比赛中出现任何突发情况，须立即与裁判联系，裁判作出判罚，选手须完全服从；
-		16、本次赛事解释权归cst专业协会所有。
-
+		<h3>比赛规则：</h3>5VS5 召唤师峡谷<br/>
+		1、	参赛选手须提前到达现场参赛，迟到10分钟将视为弃权。<br/>
+		2、	进入下一轮比赛但中途离开且未事先与工作人员说过的，会被视为弃权。<br/>
+		3、	参赛选手须年满18周岁，并携带本人有效身份证参赛。<br/>
+		4、	所有比赛均为5v5、房间模式、征召模式；<br/>
+		5、	比赛原则上采用淘汰赛、三局两胜定胜负，各赛区根据参赛队伍数量以裁判现场安排为准；<br/>
+		6、	比赛胜负由系统判定胜负为准；<br/>
+		7、	由裁判组织双方队长猜拳一轮，胜方开设房间，并在房间左侧，败者在右侧；<br/>
+		8、	抽签、开设建房、进入房间须有效率，裁判发起命令3分钟内未作为的队伍视为弃权；<br/>
+		9、	比赛禁选开始至比赛结束全过程不得人为退出游戏，违者视为弃权；<br/>
+		10、	队伍中只要有1名选手被视为弃权，则全队取消参赛资格；<br/>
+		11、	比赛开始10分钟内若有选手掉线（非人为），且不能在5分钟内重连成功，比赛重新开始。重赛时双方必须选择和重赛前完全一样的阵容和召唤师技能；（选手一旦掉线，必须立刻呼叫裁判，在裁判的监督下进行重连，若选手掉线不联系裁判，则比赛照常进行）<br/>
+		12、	比赛进行10分钟后，若有选手掉线（非人为），则在双方完成正在进行的战斗后，全部回城，直到掉线选手重新连接。重连期间双方可各派1-2名队员击杀正在攻击本方防御塔、水晶或基地的小兵，但不能离开本方防御塔攻击范围追杀小兵，不能进入野区、河道，不能埋伏、攻击对方英雄，违者视为弃权；（选手一旦掉线，必须立刻呼叫裁判，在裁判的组织下双方选手等待掉线选手重连，若选手掉线不联系裁判，则比赛照常进行）<br/>
+		13、	如果掉线选手10分钟内无法重连成功，或者掉线造成了逆转性的局势变化，裁判可在整局比赛结束前根据情况决定是否重赛，选手须完全服从，重赛时双方必须选择和重赛前完全一样的阵容；比赛一旦结束，则以比赛结果为准，不得重赛；<br/>
+		14、	比赛中不得使用任何第三方软件(聊天工具除外)，否则视为弃权；<br/>
+		15、	比赛中不得利用任何BUG，不得使用有严重BUG的英雄，以现场裁判通知为准；<br/>
+		16、	比赛中出现任何突发情况，须立即与裁判联系，裁判作出判罚，选手须完全服从；<br/>
+		17、	本次赛事解释权归CST专业协会所有。<br/>
 		比赛咨询：（每个组的队长最好都加进来）
 	</div>
 </div>
@@ -64,13 +65,18 @@
 		<h2 class="phonetitle1">英雄联盟时间表</h2>
 	</div>
 	<div class="introboxcontent">
-		<div class="timetable redbg">
-			<h2>3月4日<span>星期六</span></h2>
+		<div class="timetable normalbg">
+			<h2>3月25日 下午  <span>星期六</span></h2>
 			<h1>网吧</h1>
 			<p>13:00-15:00</p>
 		</div>
 		<div class="timetable normalbg">
-			<h2>3月5日<span>星期日</span></h2>
+			<h2>4月2日 上午  <span>星期日</span></h2>
+			<h1>网吧</h1>
+			<p>13:00-15:00</p>
+		</div>
+		<div class="timetable normalbg">
+			<h2>4月9日 下午  <span>星期日</span></h2>
 			<h1>网吧</h1>
 			<p>13:00-15:00</p>
 		</div>
@@ -87,13 +93,12 @@
 	<div class="introboxcontent">
 		<h2>第八届 UICCG 守望先锋团队赛细则</h2>
 		<ol>
-			<li><b>比赛地图：</b>游戏内所有地图</li>
-			<li><b>比赛规则及胜负判定：</b>所有比赛都将在竞技模式下进行，采取三局两胜制。率先赢得2张地图胜利的队伍即为胜出者，能够晋级下一场比赛。
-				比赛第一张为随机地图，第二张地图开始败者选图，比赛地图不可重复出现。运载目标、占领目标点类型地图比赛两队将各成为一次进攻方与防守方，若某队两次均获得胜利则获得该局比赛胜利；若运载目标、占领要点类型地图两队各获得一次比赛胜利，则随机挑选一张占领目标点地图进行一小局争夺点战（只抢第一个点作为胜负标准），获胜者获得该局比赛胜利（此时不需两队都进行一次进攻一次防守）。
+			<li><b>1. 比赛地图：</b>游戏内所有地图</li>
+			<li><b>2. 比赛规则及胜负判定：</b>所有比赛都将在竞技模式下进行，采取三局两胜制。率先赢得2张地图胜利的队伍即为胜出者，能够晋级下一场比赛。
+				<br/>比赛第一张为随机地图，第二张地图开始败者选图，比赛地图不可重复出现。运载目标、占领目标点类型地图比赛两队将各成为一次进攻方与防守方，若某队两次均获得胜利则获得该局比赛胜利；若运载目标、占领要点类型地图两队各获得一次比赛胜利，则随机挑选一张占领目标点地图进行一小局争夺点战（只抢第一个点作为胜负标准），获胜者获得该局比赛胜利（此时不需两队都进行一次进攻一次防守）。
 			</li>
-			<li><b>赛程：</b>本次比赛采用抽签决定对阵双方，？月？日没有来抽签的队伍将由专学负责代抽。本次比赛一共有？？只队伍，分为AB两组，每组？？支队伍。A 组周六比赛，B 组周日比赛。第一轮比赛结束后晋级？支队伍，随后进行第二轮抽签决定新的对阵情况以及轮空队伍。轮空队伍直接晋级下一轮。A 组第一名与 B 组第一名将于？年？月？日进行决赛。两组的亚军将于？月？日进行第三名争夺。（如参赛队伍不多则安排所有队伍在同一个大组内进行淘汰赛）</li>
-			<li><b>注意事项：</b>请各位选手按需自带设备进行比赛。如在网吧进行比赛，请参赛选手自行承担来往交通费及网费。</li>
-			<li><b>队伍组成及相关：</b>每支队伍由6名选手组成，整个比赛期间（报名后至所有比赛结束）不可变更选手及战网昵称；所有队伍报名时需要提供所有队员的联系方式。</li>
+			<li><b>3. 注意事项：</b>请各位选手按需自带设备进行比赛。如在网吧进行比赛，请参赛选手自行承担来往交通费及网费。</li>
+			<li><b>4. 队伍组成及相关：</b>每支队伍由6名选手组成，整个比赛期间（报名后至所有比赛结束）不可变更选手及战网昵称；所有队伍报名时需要提供所有队员的联系方式。</li>
 			<li><b>特殊情况处理：</b>
 				<ul>
 					<li>掉线：比赛中若由于客观原因，造成的掉线卡机的情况，3分钟内发生掉线情况可申请重赛;超过3分钟发生掉线情况比赛继续，掉线的选手自行重连回游戏。重赛机制需要队伍申请执行，每支队伍只有1次掉线申请重赛的机会。</li>
@@ -102,10 +107,11 @@
 				</ul>
 				若出现掉线、卡机、卡顿等非人为情况出现请及时呼叫相关工作人员，由裁判决定是否重赛（原则上不给予重赛）。重赛规则详见第八届 UICCG 守望先锋团队赛重赛规则
 			</li>
-			<li><b>严禁代打：</b>参赛选手请携带uic校园卡做身份证明，否则将不允许该选手参赛。</li>
-			<li><b>游戏BUG：</b>禁止使用当前版本下的游戏BUG，官方有权禁用引起BUG的英雄或地图。如参赛人员有利用游戏中BUG的行为，将判定该玩家所在队伍失去比赛资格。</li>
-			<li><b>比赛版本更替：</b>比赛将使用最新游戏版本。</li>
-			<li><b>参赛队伍管理：</b>所有参赛队伍成员将由组织者统一拉进一个比赛微信群作为消息通知的平台，请选手们在群内谨言慎行。若是有在群内发布含有恶意辱骂其他选手、虚假消息等等类似言论的选手出现，组织者有权取消其所在队伍的比赛资格，其对手直接晋级下一轮比赛。</li>
+			<li><b>5. 严禁代打：</b>参赛选手请携带uic校园卡做身份证明，否则将不允许该选手参赛。</li>
+			<li><b>6. 游戏BUG：</b>禁止使用当前版本下的游戏BUG，官方有权禁用引起BUG的英雄或地图。如参赛人员有利用游戏中BUG的行为，将判定该玩家所在队伍失去比赛资格。</li>
+			<li><b>7. 比赛版本更替：</b>比赛将使用最新游戏版本。</li>
+			<li><b>8. 参赛队伍管理：</b>所有参赛队伍成员将由组织者统一拉进一个比赛微信群作为消息通知的平台，请选手们在群内谨言慎行。若是有在群内发布含有恶意辱骂其他选手、虚假消息等等类似言论的选手出现，组织者有权取消其所在队伍的比赛资格，其对手直接晋级下一轮比赛。</li>
+			<li><b>9. 重赛: </b>有关重赛的胜负判定及比赛方式，请看 <b>《第八届 UICCG 守望先锋团队赛重赛规则》</b></li>
 		</ol>
 	</div>
 </div>
@@ -116,13 +122,18 @@
 		<h2 class="phonetitle1">守望先锋时间表</h2>
 	</div>
 	<div class="introboxcontent">
-		<div class="timetable redbg">
-			<h2>3月4日<span>星期六</span></h2>
+		<div class="timetable normalbg">
+			<h2>3月25日 上午  <span>星期六</span></h2>
 			<h1>网吧</h1>
 			<p>13:00-15:00</p>
 		</div>
 		<div class="timetable normalbg">
-			<h2>3月5日<span>星期日</span></h2>
+			<h2>4月1日 上午  <span>星期六</span></h2>
+			<h1>网吧</h1>
+			<p>13:00-15:00</p>
+		</div>
+		<div class="timetable normalbg">
+			<h2>4月8日 上午  <span>星期六</span></h2>
 			<h1>网吧</h1>
 			<p>13:00-15:00</p>
 		</div>
@@ -130,23 +141,6 @@
 </div>
 <!--ow part end-->
 <!--king part start-->
-<!--king contents-->
-<div class="detailbox" id="kingcontent">
-	<div class="phoneheader">
-		<img src="images/clear.png" class="imgstyle" alt="" onclick='hidedetailbox("kingcontent")'>
-		<h2 class="phonetitle1">王者荣耀</h2>
-	</div>
-	<div class="introboxcontent">
-		<h2>第八届 UICCG 王者荣耀赛制</h2>
-		<h3>队伍</h3>
-		<p>每个队伍中必须有五位成员，其中有一位队长和四位队员，允许有一名替补。
-			注：比赛时不允许未登记的选手参加，否则违规队伍判弃权。 </p>
-		<h3>比赛形式</h3>
-		<p>比赛在预赛（当队伍数量>8 时），采取双淘汰制度：第一场按照系统随机生成的比赛表进 行比赛，决出胜方（A 组）和负方（B 组）。A 组中两队随机对战，胜利方继续与其他 A 组队伍比拼；负方进入 B 组与 B 组其他队伍比赛。
-			B 组中如果累计失败数达两次的队伍则淘汰。
-			当 A 组还剩下 6 只队伍，B 组还剩下 2 只队伍时，进入复赛。复赛中采用三局两胜 （BO3），胜利队伍晋级，失败队伍淘汰。最后选出冠亚季军队伍。 </p>
-	</div>
-</div>
 <!--king time-->
 <div class="detailbox" id="kingtime">
 	<div class="phoneheader">
@@ -154,13 +148,13 @@
 		<h2 class="phonetitle1">王者荣耀时间表</h2>
 	</div>
 	<div class="introboxcontent">
-		<div class="timetable redbg">
-			<h2>3月4日<span>星期六</span></h2>
+		<div class="timetable normalbg">
+			<h2>3月26日 上午  <span>星期日</span></h2>
 			<h1>网吧</h1>
 			<p>13:00-15:00</p>
 		</div>
 		<div class="timetable normalbg">
-			<h2>3月5日<span>星期日</span></h2>
+			<h2>4月8日 上午  <span>星期六</span></h2>
 			<h1>网吧</h1>
 			<p>13:00-15:00</p>
 		</div>
@@ -177,11 +171,10 @@
 	<div class="introboxcontent">
 		<h2>第八届 UICCG炉石传说赛制</h2>
 		<h3>比赛规则</h3>
-		<p>比赛之前，每位参赛选手先将卡组截图上传到服务器上，每个人至少上传四个卡组，四个卡组的职业不可重复。两人对战之前，先互相观看对方的卡组，并互相删掉对方一个卡组，然后开始进行对战。对战时，选手可以自由决定卡组出战顺序；每次对战后，比赛胜利的一方更换卡组，输的一方不能更换卡组，先用完三套卡组的一方胜利。半决赛和决赛时，每位参赛选手需上传五套职业不同的卡组，并让对手删除掉一个卡组。其他规则和淘汰赛一样，先用完四套卡组的一方胜利。</p>
+		<p>本次比赛采用征服赛制。参赛选手先准备四个不同职业的卡组，在对战之前让对手看自己的卡组并 且删除其中一个卡组，用剩下的三个卡组进行对战。胜者不可继续使用同一卡组，失败方可以继续 使用原来的卡组或使用其他卡组，当有一方三个卡组都获得至少一次胜利以后赢得本次比赛的胜 利。每次比赛完以后双方都要进行截图保存到电脑或移动设备上，从而保证比赛结果的有效性。</p>
 		<h3>比赛流程</h3>
-		<p>首先随机将选手分成四个大组，在大组中将选手编号，然后一号二号对战，三号四号对战，这两组胜利的选手再进行对战， 以此类推，直至每组剩下一名选手，再进行半决赛和决赛。</p>
-		<h3>比赛场地</h3>
-		<p>可以在琢乐汇，大家绿或者租用教室。</p>
+		<p>1. 在比赛两天前将自己的卡组截图上传到服务器上 <br/>2. 比赛当天首先根据抽签结果进行对战，如果参赛人数为奇数，则有一人可以直接进入下一轮， 若下一轮仍为奇数，则上一轮直接进入下一轮的选手必须参赛，再从上一轮胜者中抽一人直接 进入下一轮
+			<br/>3. 第一个比赛日决出四强，第二个比赛日半决赛和决赛选手必须有五个卡组，比赛前让对手绊掉 一个卡组然后进行对战，其他规则和淘汰赛一样，先赢得四场的选手胜利</p>
 		<h3>设备</h3>
 		<p>自带电脑，iPad或手机。</p>
 	</div>
@@ -193,13 +186,8 @@
 		<h2 class="phonetitle1">炉石传说时间表</h2>
 	</div>
 	<div class="introboxcontent">
-		<div class="timetable redbg">
-			<h2>3月4日<span>星期六</span></h2>
-			<h1>网吧</h1>
-			<p>13:00-15:00</p>
-		</div>
 		<div class="timetable normalbg">
-			<h2>3月5日<span>星期日</span></h2>
+			<h2>3月26日 下午  <span>星期日</span></h2>
 			<h1>网吧</h1>
 			<p>13:00-15:00</p>
 		</div>
@@ -216,9 +204,11 @@
 	<div class="introboxcontent">
 		<h2>第八届 UICCG皇室战争赛制</h2>
 		<ul>
+			<li><b>参赛人员： </b>所有UIC在读学生包括毕业学长学姐均可以报名，要求现场参赛。</li>
+			<li><b>赛制</b></li>
 			<li>所有参赛人员在同一部落中，比赛以友谊赛的形式进行。比赛分为小组赛和淘汰赛。</li>
-			<li>小组赛。所有参赛人员侯倩分成若干组。组内所有人以友谊赛方式进行对战，同时积分，与组内其他人各1次对战。赢得一场比赛获得3分，平局双方各1分，输则没有分。当比赛完时，各小组前X名进淘汰赛（根据报名人数），淘汰赛人数为8/16（根据比赛人数）</li>
-			<li>淘汰赛。进入淘汰赛的参赛选手根据小组排名决定对手（如第一最另一组最后一名），以三局两胜制决定晋级。确定对手后双方进行ban卡选择，各选择1张卡，若选择相同则只有一张ban卡，即双方都不能在该局比赛中使用该卡（若使用则本局比赛判负同时警告一次，同时使用ban卡则跳过本局比赛双方同时警告，警告达到两次取消比赛资格。）每局比赛后双方可以任意调整卡组（ban卡除外）并继续下一局对战。晋级选手继续抽签直到决出冠亚季军。</li>
+			<li>小组赛。所有参赛人员平均分成若干组。组内所有人以友谊赛方式进行对战，同时积分，与组内其他人各1次对战。赢得一场比赛获得3分，平局双方各1分，输则没有分。当比赛完时，各小组前X名进淘汰赛（根据报名人数），淘汰赛人数为8/16（根据比赛人数）</li>
+			<li>淘汰赛。进入淘汰赛的参赛选手根据小组排名决定对手（如第一名与另一组最后一名），以三局两胜制决定晋级。确定对手后双方进行ban卡选择，各选择1张卡（选好后告诉裁判后公布），若选择相同则只有一张ban卡，即双方都不能在该局比赛中使用该卡（若使用则本局比赛判负同时警告一次，同时使用ban卡则跳过本局比赛双方同时警告，警告达到两次取消比赛资格。）每局比赛后双方可以任意调整卡组（ban卡除外）并继续下一局对战。晋级后抽签决定下一轮的对手，并重新进行ban卡环节（同上），同样三局两胜制。同样抽签决定对手，以此类推，直到决出冠亚季军。</li>
 		</ul>
 	</div>
 </div>
@@ -229,13 +219,8 @@
 		<h2 class="phonetitle1">皇室战争时间表</h2>
 	</div>
 	<div class="introboxcontent">
-		<div class="timetable redbg">
-			<h2>3月4日<span>星期六</span></h2>
-			<h1>网吧</h1>
-			<p>13:00-15:00</p>
-		</div>
 		<div class="timetable normalbg">
-			<h2>3月5日<span>星期日</span></h2>
+			<h2>4月2日 下午  <span>星期日</span></h2>
 			<h1>网吧</h1>
 			<p>13:00-15:00</p>
 		</div>
@@ -243,29 +228,6 @@
 </div>
 <!--clash royale part end-->
 <!--dizhu part start-->
-<!--dizhu contents-->
-<div class="detailbox" id="dizhucontent">
-	<div class="phoneheader">
-		<img src="images/clear.png" class="imgstyle" alt="" onclick='hidedetailbox("dizhucontent")'>
-		<h2 class="phonetitle1">斗地主</h2>
-	</div>
-	<div class="introboxcontent">
-		<h2>第八届 UICCG斗地主赛制</h2>
-		<h3>游戏介绍</h3>
-		<p>斗地主是一种在中国流行的纸牌游戏。游戏用一副含有54张牌（包括大小鬼王）的扑克牌，由3个玩家进行，其中一方为地主，其余两人为另一方——农民。双方对战，先出完牌的一方获胜。</p>
-		<p>本次比赛选择使用人群基数较大的“欢乐斗地主”应用，需要参赛选手将游戏app更新到最新版以免出错，版本以比赛第一轮开始前的官方最新发布版本为准。因游戏版本过低导致无法邀请好友及其他问题者自行承担后果！</p>
-		<h3>赛制</h3>
-		<h4>入围赛：</h4>
-		<p>选手们将被随机分组，3人为一组，多余的选手轮空到下一轮比赛。一组进行3轮比赛，采用积分制记录，3轮比赛后积分最高的一人胜出进入下一轮（需等该轮所有人完成比赛后才进行下一轮）。若组内2人或3人分数均相同，将加赛1场，决出唯一一名获胜者进入下一轮，以此类推。</p>
-		<p>可能出现的情况（举例）：</p>
-		<p><b>1.甲，乙都为2分，丙为1分：</b></p>
-		<p>甲乙丙在一起加赛1场，只在甲、乙中决出胜者，甲、乙分数高者出线，丙无论多少分均无法出线。</p>
-		<p><b>甲、乙、丙三人同分：</b></p>
-		<p>加赛一场，分高者出线。如果加赛后出现第一种情况，则按照第一种情况继续比赛。</p>
-		<h3>决赛</h3>
-		<p>当比赛人数只剩下最后3人时进行决赛。决赛将进行6轮比赛，6轮比赛后积分最高者将获得本次“斗地主”大赛冠军！若出现积分相同的情况，请参考上面入围赛的规则。</p>
-	</div>
-</div>
 <!--dizhu time-->
 <div class="detailbox" id="dizhutime">
 	<div class="phoneheader">
@@ -273,13 +235,8 @@
 		<h2 class="phonetitle1">斗地主时间表</h2>
 	</div>
 	<div class="introboxcontent">
-		<div class="timetable redbg">
-			<h2>3月4日<span>星期六</span></h2>
-			<h1>网吧</h1>
-			<p>13:00-15:00</p>
-		</div>
 		<div class="timetable normalbg">
-			<h2>3月5日<span>星期日</span></h2>
+			<h2>4月1日 下午  <span>星期六</span></h2>
 			<h1>网吧</h1>
 			<p>13:00-15:00</p>
 		</div>
@@ -363,7 +320,7 @@
 			<img src="https://ols1alctg.qnssl.com/17-2-23/43336671-file_1487811769529_79cb.jpg" width="100%" alt="">
 			<h2>英雄联盟</h2>
 			<p class="left">《英雄联盟》(简称LOL)是由美国拳头游戏(Riot Games)开发、中国大陆地区腾讯游戏代理运营的英雄对战MOBA竞技网游。游戏里拥有数百个个性英雄，并拥有排位系统、天赋系统、符文系统等特色养成系统。《英雄联盟》还致力于推动全球电子竞技的发展，除了联动各赛区发展职业联赛、打造电竞体系之外，每年还会举办“季中冠军赛”“全球总决赛”“All Star全明星赛”三大世界级赛事，获得了亿万玩家的喜爱。</p>
-			<p class="spanleft"><b>查看全文</b></p>
+			<p class="spanleft"><b>查看赛制</b></p>
 		</div>
 		<button class="mainbutton1 bluebutton" id="ow" onclick="showdetailbox('loltime')">
 			查看比赛时间和地点
@@ -376,7 +333,7 @@
 	  <h2>守望先锋</h2>
 <p class="left">《守望先锋》是一款由暴雪娱乐开发并发行的多人第一人称射击游戏。<br>
 	《守望先锋》把玩家分为两支队伍，每队6人。玩家可从几个预定英雄人物中选择，每个英雄有自己独特属性和技能；这些英雄分为四类：突击型、防御型、重装型和支援型。队员合力保护并捍卫地图上的控制点，或在有限时间内护送载具到达指定地点。玩家获得的诸如人物皮肤和胜利姿势等装扮不会影响游戏。</p>
-	  <p class="spanleft"><b>查看全文</b></p>
+	  <p class="spanleft"><b>查看赛制</b></p>
   </div>
 	<button class="mainbutton1 bluebutton" id="king" onclick="showdetailbox('owtime')">
 		查看比赛时间和地点
@@ -386,12 +343,12 @@
 <div class="maingame clearfix">
 	<!--king intro-->
 	<div class="gamecontainer flowleft">
-	<div class="introbox shadow"  id="kingintro" onclick='showdetailbox("kingcontent")'>
+	<div class="introbox shadow"  id="kingintro" onclick='window.location.href="documents/king.pdf"'>
 		<img src="https://ols1alctg.qnssl.com/17-2-23/8142067-file_1487811769366_ab58.jpg" width="100%" alt="">
 		<h2>王者荣耀</h2>
 		<p class="left">《王者荣耀》是由腾讯游戏开发并运行的一款运营在Android、IOS平台上的MOBA类手游，于2015年11月26日在Android、IOS平台上正式公测，游戏前期使用名称有《英雄战迹》、《王者联盟》。
 			<br>王者荣耀是类dota手游，游戏中的玩法以竞技对战为主，玩家之间进行1V1、3V3、5V5等多种方式的PVP对战，还可以参加游戏的冒险模式，进行PVE的闯关模式，在满足条件后可以参加游戏的年度排位赛等。</p>
-		<p class="spanleft"><b>查看全文</b></p>
+		<p class="spanleft"><b>查看赛制</b></p>
 	</div>
 		<button class="mainbutton1 bluebutton" id="cr" onclick="showdetailbox('kingtime')">
 			查看比赛时间和地点
@@ -404,7 +361,7 @@
 		<h2>皇室战争</h2>
 		<p class="left">《部落冲突：皇室战争》（Clash Royale）是由芬兰游戏公司Supercell所推出的，以《部落冲突》的角色和世界观为原型，加入即时策略、MOBA以及卡牌等元素的手机游戏，于2016年1月4日在App Store发布。
 			在游戏中，玩家需通过不断的开启宝箱来获取卡片的方式来增强自己的战斗力，进而与其他在线的玩家进行匹配战斗。随着奖杯提升，开启不同场地的竞技场。</p>
-		<p class="spanleft"><b>查看全文</b></p>
+		<p class="spanleft"><b>查看赛制</b></p>
 	</div>
 		<button class="mainbutton1 bluebutton" id="hearth" onclick="showdetailbox('crtime')">
 			查看比赛时间和地点
@@ -419,7 +376,7 @@
 			<h2>炉石传说</h2>
 			<p class="left">《炉石传说：魔兽英雄传》是暴雪娱乐开发的一款集换式卡牌游戏。
 				《炉石传说：魔兽英雄传》是一款免费游戏，故事背景基于魔兽争霸系列的世界观，玩家可以另行购买卡牌包。</p>
-			<p class="spanleft"><b>查看全文</b></p>
+			<p class="spanleft"><b>查看赛制</b></p>
 		</div>
 		<button class="mainbutton1 bluebutton" onclick="showdetailbox('hearthtime')">
 			查看比赛时间和地点
@@ -430,11 +387,11 @@
 	</div>
 	<!--dizhu intro-->
 	<div class="gamecontainer flowright">
-		<div class="introbox shadow"  id="dizhuintro" onclick='showdetailbox("dizhucontent")'>
+		<div class="introbox shadow"  id="dizhuintro" onclick='window.location.href="documents/dizhu.pdf"'>
 			<img src="https://ols1alctg.qnssl.com/17-2-23/24230485-file_1487811769128_a905.jpg" width="100%" alt="">
 			<h2>斗地主</h2>
 			<p class="left">斗地主是一种在中国流行的纸牌游戏。游戏由3个玩家进行，用一副54张牌（包括大小王），其中一方为地主，其余两家为另一方，双方对战，先出完牌的一方获胜。</p>
-			<p class="spanleft"><b>查看全文</b></p>
+			<p class="spanleft"><b>查看赛制</b></p>
 		</div>
 		<button class="mainbutton1 bluebutton" onclick="showdetailbox('dizhutime')">
 			查看比赛时间和地点
